--- a/VulcanForWindows/VulcanForWindows.csproj
+++ b/VulcanForWindows/VulcanForWindows.csproj
@@ -44,7 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="BlankPage1.xaml.cs" />
-    <Compile Remove="FinalGradesAnalyzerPage.xaml.cs" />
     <Compile Remove="MarkdownToWinUi3\MarkdownToWinUi3\App.xaml.cs" />
     <Compile Remove="MarkdownToWinUi3\MarkdownToWinUi3\MainWindow.xaml.cs" />
     <Compile Remove="VulcanoidServerClient\VulcanoidServerClient\Program.cs" />
@@ -347,7 +346,6 @@
   </ItemGroup>
   <ItemGroup>
     <Page Remove="BlankPage1.xaml" />
-    <Page Remove="FinalGradesAnalyzerPage.xaml" />
     <Page Remove="MarkdownToWinUi3\MarkdownToWinUi3\App.xaml" />
     <Page Remove="MarkdownToWinUi3\MarkdownToWinUi3\MainWindow.xaml" />
   </ItemGroup>
@@ -391,5 +389,10 @@
   </ItemGroup>
   <ItemGroup>
     <PRIResource Remove="MarkdownToWinUi3\MarkdownToWinUi3\Properties\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="FinalGradesAnalyzerPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
